sample_manifests/forAwsLBCtl/flask-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      serviceAccountName: flask-app
      containers:
      - name: flask-app
        image: 338456725408.dkr.ecr.ap-northeast-1.amazonaws.com/flask:2022-06-17H09.02.50-975ae3d
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
  selector:
    matchLabels:
      app: flask-app
