sample_manifests/forAwsLBCtl/flask-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: flask-app
spec:
  selector:
    app: flask-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  namespace: flask-app
  labels:
    app: flask-app
  annotations:
    kubernetes.io/ingress.class: alb  # AWS ALBの作成
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:338456725408:certificate/124163b3-7ec8-4cf7-af6e-f05d8bc6ce8f
    external-dns.alpha.kubernetes.io/hostname: flask-dev.yamazon.tk  # Route53 HostedZoneにendpointを登録
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-app
                port:
                  number: 80
            pathType: Prefix
            path: /
